hphp/hack/test/typecheck/reactive/rx_class2.php
<?hh // partial

<<__RxShallow>>
interface A {
}
